correct social media icon alignment with flexbox

--- a/style.css
+++ b/style.css
@@ -101,37 +101,32 @@ img {
 
 
 /* SOCIAL MEDIA ICONS/LINKS */
-.table-social-links {
- display: table;
- table-layout: fixed;
- width: 100%;
-}
-
-.table-row-social-links {
- display: table-row;
-}
-
-.table-cell-social-links {
- padding: 20px;
- display: table-cell;
- padding: 5px;
- text-align: right;
-}
-
-.table-cell-social-links:last-child {
-  padding-right: 0;
-  margin-right: 0px;
-}
 
 .social-links {
   padding: 0;
   margin-top: 10px;
 }
 
-.soc-link-icon {
+.social-links-container {
+ display: flex;
+ justify-content: flex-end;
+}
+
+.social-link-icons {
+ padding: 20px;
+ padding: 5px;
+ align-items: space-between;
+ flex-grow: 1;
+}
+
+.social-link-icons:last-child {
+  padding-right: 0;
+  flex-grow: 0;
+}
+
+.soc-link-icon-img {
   height: 48px;
   width: 48px;
-  margin: auto;
 }
 
 
